[package]
name = "helferlein"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = "=0.31.1"
log = "=0.4"
env_logger = "=0.11"
anyhow = { version = "=1.0.86", features = ["backtrace"] }
rust_decimal = { version = "=1.37.1", default-features = false, features = ["std", "serde-bincode"] }
egui_extras = "=0.31.1"
uuid = { version = "=1.10.0", features = ["v7", "serde"] }
chrono = { version = "=0.4.38", default-features = false, features = ["serde"] }
egui_file = "=0.22"
fuzzy-matcher = "=0.3.7"
printpdf = "=0.7"
azul-text-layout = "=0.0.4"
dirs = "=6.0.0"
serde = { version = "=1.0.219", features = ["derive"] }
toml = "=0.8.19"
redb = "=2.2.0"
bincode = "=1.3.3"
open = "=5.3.0"
egui_extras_datepicker_fork = { git = "https://git.sr.ht/~zupzup/egui_extras_datepicker_fork"}
once_cell = "=1.21.3"

